# Paper-code-Optimality-conditions-for-spatial-search-with-multiple-marked-vertices

./: LICENSE  README.md  code.ipynb
QWSearch_rust/: Cargo.toml  Makefile
QWSearch_rust/src/: lib.rs  main.rs  qw.rs
