[package]
name = "QWSearch_rust"
version = "0.1.0"
authors = ["Mathieu <mathieuroget@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
num = "0.4.0"
rand = "0.7.2"
rayon = "1.5"
pyo3 = { version = "0.15.1", features = ["extension-module", "abi3-py36"] }

[lib]
name = "qwsearch"
crate-type = ["cdylib"]

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.maturin]
bindings = "cffi"
compatibility = "linux"

